IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
11/20/07: IMOD_3-10-22
11/20/07: Switched to using individual script for each Fortran graphics program
(nda, mtk, etc) in the Mac so they can run from command files without using
runimodqtapp; added commands to put qtlib on the library path to scripts
produced by vmstocsh and vmstopy.

11/17/07: Increased allowed length of concatenated and temporary file names
in Fortran programs from 80 to 320; increased filename lengths to 320 for
rotatevol, matchvol, warpvol and newstack.

10/16/07: Added ability to make the side views bigger or smaller relative to
the XY view in the XYZ window, and added a centering button.

11/13/07: IMOD_3-10-21
11/13/07: Fixed linklibs-mac to work on OS X 10.5, to include new IMOD
library, and to provide more error checks.

11/13/07: Added setting in 3dmod preferences to control the volume size at
which slicer speeds up its computations, made it drop high-resolution display
before radically reducing number of slices averaged, gave credit for multiple
processors if defined by IMOD_PROCESSORS, and eliminated double draws when
changing slicer angles.

11/12/07: Interface to anisotropic diffusion added to eTomo.

11/10/07: Made s save model in slicer window, assigned l hot key to show
slice instead.  Fixed updating of slicer angle window when new model is
created, and stopped synchronization to slicer angle table when Auto button is
turned on since direction of action is ambiguous.

11/9/07: Added option to imodmesh to recompute normals from an existing mesh.

11/9/07: Added ability to set a directory to receive snapshots in 3dmod.

11/1/07: Fixed reading of ascii model with DOS line endings

10/29/07: Converted Xcorr to PIP input, removed redundant filters, adjusted 
origin when run on a subset of stack, renamed to Xcorrstack to reduce confusion
with xcorr.com.

10/24/07: Fixed install script to work on Vista and allowed alternate