@@ -1,5 +1,9 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+1/22/07: Generalize the kernel smoothing in 3dmod and clip to use Gaussian
+kernels, 3x3, 5x5, or 7x7, with specified sigma.  Using a larger sigma should
+reduce need to iterate, but also added an option to iterate smoothing in clip.
+
 11/20/07: IMOD_3-10-22
 11/20/07: Switched to using individual script for each Fortran graphics program
 (nda, mtk, etc) in the Mac so they can run from command files without using
